# Crucible

./: .gitignore  Cargo.toml  README.md  anvil.py  build.rs  crucible.in  crucible.py  io.github.sugarycandybar.Crucible.yml  meson.build
.github/workflows/: ci.yml
anvil/: __init__.py
anvil/backend/: __init__.py  hardware.py  stress.py
anvil/ui/: __init__.py  application.py  identity_view.py  stability_view.py  style.css  window.py
anvil/ui/widgets/: __init__.py  temp_gauge.py
crucible/: __init__.py  meson.build
crucible/backend/: __init__.py  hardware.py  monitor.py  stress.py
crucible/ui/: __init__.py  application.py  identity_view.py  stability_view.py  style.css  window.py
crucible/ui/widgets/: __init__.py  freq_graph.py  temp_gauge.py
data/: crucible.gresource.xml  io.github.sugarycandybar.Crucible.Stability.gschema.xml  io.github.sugarycandybar.Crucible.desktop  io.github.sugarycandybar.Crucible.metainfo.xml  meson.build
data/icons/: meson.build
packaging/: io.github.sugarycandybar.Crucible.src.gresource.xml  meson.build
packaging/flatpak/: anvil-wrapper.sh  crucible-wrapper.sh  generated-sources.json  io.github.sugarycandybar.Anvil.yml  io.github.sugarycandybar.Crucible.yml  python3-requirements.json
packaging/linux/: io.github.sugarycandybar.Anvil.Stability.gschema.xml  io.github.sugarycandybar.Anvil.desktop  io.github.sugarycandybar.Anvil.metainfo.xml  io.github.sugarycandybar.Crucible.desktop  io.github.sugarycandybar.Crucible.metainfo.xml
src/: application.rs  config.rs  identity_view.rs  main.rs  meson.build  stability_view.rs  window.rs
src/backend/: hardware.rs  mod.rs  monitor.rs  stress.rs
src/ui/widgets/: freq_graph.rs  mod.rs  temp_gauge.rs
