[package]
name = "crucible"
version = "1.1.0"
edition = "2021"
authors = ["Sugarycandybar"]
license = "GPL-3.0-or-later"
description = "View hardware specs and stress test your system"

[dependencies]
gtk4 = { version = "0.11.3", features = ["v4_22"] }
libadwaita = { version = "0.9.1", features = ["v1_9", "gtk_v4_22", "gio_v2_80"] }
gio = "0.22"
glib = "0.22"

regex = "1"
libc = "0.2"
