application_id = 'io.github.sugarycandybar.Crucible'

scalable_apps_dir = get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'apps'
install_data(
  '../@0@.svg'.format(application_id),
  'io.github.sugarycandybar.Hosty.svg',
  'io.github.sugarycandybar.Carabiner.svg',
  install_dir: scalable_apps_dir
)

symbolic_apps_dir = get_option('datadir') / 'icons' / 'hicolor' / 'symbolic' / 'apps'
install_data(
  '../@0@-symbolic.svg'.format(application_id),
  install_dir: symbolic_apps_dir
)
